--- a/index.html
+++ b/index.html
@@ -19,3 +19,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+git add .
+git commit -m "Re-trigger GitHub Pages deployment"
+git push origin main
